--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,14 @@
 buildscript {
     repositories {
         jcenter()
+
+        maven {
+            url 'https://dl.bintray.com/deepankur-sadalskmlksndmna/maven/'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.1'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
