--- a/notificationview/build.gradle
+++ b/notificationview/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.library'
 
+ext {
+    PUBLISH_GROUP_ID = 'com.deepankur.notificationview'
+    PUBLISH_ARTIFACT_ID = 'notificationanimation'
+    PUBLISH_VERSION = '1.0'
+}
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
@@ -30,3 +35,4 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
 }
+apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
